# Use-Case-Playground

./: CMakeLists.txt  README.md  new_feature
.code-intelligence/: README.md  build.sh  project.yaml
.code-intelligence/.web_services/: grpc-test.json  webgoat.json
.code-intelligence/fuzz_targets/: fuzz-java-grpc.yaml  fuzz-java-grpc_headers.http  webgoatchallenge5.yaml  webgoatchallenge5_initial_requests.http
.code-intelligence/webgoatchallenge5_seed_corpus/: seed_0.http
.github/workflows/: main.yml
buildimage/: Dockerfile
c_cpp/: CMakeLists.txt  README.md
c_cpp/api_fuzzing/: README.md
c_cpp/api_fuzzing/chain/: README.md
c_cpp/api_fuzzing/mocking/: CMakeLists.txt  README.md
c_cpp/api_fuzzing/plain/: README.md
c_cpp/embedded_library/fuzz_targets/: API Fuzz Test With Mocks.cpp  API Fuzz Test With Mocks.cpp.yaml
c_cpp/embedded_library/mocking/: mocklib.cpp
c_cpp/network_socket/: CMakeLists.txt  README.md
c_cpp/unit-fuzzing-demo/: CMakeLists.txt  README.md  main.cpp
c_cpp/unit-fuzzing-demo/fuzz_tests/: my_fuzz_test.cpp
c_cpp/unit-fuzzing-demo/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  explore_me.cpp  explore_me.h
c_cpp/unit-fuzzing-demo/unit_tests/: .my_unit_test.cpp.swp  my_ctest.cpp  my_gtest.cpp
go/: README.md
go/api_fuzzing/: README.md  default.yaml  fuzzStringCompare.go  fuzzXorEncrypt.go  go.mod
java/: README.md
java/api_fuzzing/: JavaAPIFuzzer.java  JavaAPIFuzzer.java.yaml  README.md
java/grpc/: README.md
java/webapp/: Dockerfile  README.md  dockerbuild.sh  dockerrun.sh  start.sh
(+21 files in other folders)
